duration issue fixed

--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -25,7 +25,7 @@
           </tr>
           <tr>
             <td>Duration</td>
-            <td>{{ movie.duration }} minutes</td>
+            <td>{{ convertTimeDuration(movie.duration) }}</td>
           </tr>
           <tr>
             <td>Producers</td>
